Fix search result overflow

--- a/evolveum-jekyll-theme/_sass/evolveum/_search.scss
+++ b/evolveum-jekyll-theme/_sass/evolveum/_search.scss
@@ -190,7 +190,7 @@
         justify-content: space-between;
     }
     .searchResultBranched {
-        max-width: calc(100% - 155px) !important;
+        max-width: calc(100% - 175px) !important;
     }
     .searchResultNotBranched {
         max-width: calc(100% - 100px) !important;
